force-app/main/default/objects/Account/fields/Asset_Size_M__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size_M__c</fullName>
    <description>Asset size in millions.</description>
    <label>Asset Size $M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>