force-app/main/default/objects/Account/fields/Core_Product__c.field-meta.xml
<CustomField>
    <fullName>Core_Product__c</fullName>
    <label>Core Product</label>
    <length>255</length>
    <type>Text</type>
    <description>Core product e.g. Signature.</description>
</CustomField>