force-app/main/default/objects/Account/fields/FBPS_Direct_Fintech__c.field-meta.xml
<CustomField>
    <fullName>FBPS_Direct_Fintech__c</fullName>
    <label>FBPS, Direct, Fintech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FBPS</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>