force-app/main/default/objects/Account/fields/OLB_Business_Retail_Users__c.field-meta.xml
<CustomField>
    <fullName>OLB_Business_Retail_Users__c</fullName>
    <label>OLB Business and/or Retail Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>