force-app/main/default/objects/Account/fields/Small_Business_DDAs__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_DDAs__c</fullName>
    <label>Small Business DDAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>