force-app/main/default/objects/Account/fields/Type_of_FI__c.field-meta.xml
<CustomField>
    <fullName>Type_of_FI__c</fullName>
    <label>Type of FI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Union</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>